<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2014 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="online_frag"> "Action Online"</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyB5Cp3Yw78nxc71FrASNJP_dI3qpar1ES8
    </string>
    <string name="title_activity_maps">Charities Map</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="permissions_read_phone_state_message">
        Grant permission to read your phone number from your device.
    </string>    <string name="app_name">istandwithrefugees</string>
    <string name="permissions_read_phone_state_title">Read Phone Number</string>
    <string name="permissions_receive_sms_message">
        Grant permission to read your SMS code from your device to pre-fill.
    </string>
    <string name="permissions_receive_sms_title">Read SMS Code</string>
    <string name="FACEBOOK_APP_ID">175405189772838</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">ce5c8ee1973bf4bd102e9229f638683b</string>

    <string name="edittext_hint"></string>
    <string-array name="area_array">
        <item>Scotland</item>
        <item>North East</item>
        <item>North West</item>
        <item>Yorkshire and the Humber</item>
        <item>East Midlands</item>
        <item>West Midlands</item>
        <item>East Anglia</item>
        <item>Greater London</item>
        <item>South East</item>
        <item>South West</item>
        <item>Wales</item>
        <item>Northern Ireland</item>
        <item>Republic of Ireland</item>
    </string-array>

    <string-array name="type_of_aid_array">
    <item>General or Multifaceted Support</item>
    <item>Women and/or Children</item>
    <item>Education "&amp;" Employability</item>
    <item>Legal / Provision of Information</item>
    <item>Medical, Health "&amp;" Hygiene</item>
    <item>Technology / IT</item>
    <item>Lgbtqia</item>
    <item>Creative "&amp;" Activities / Labour</item>
    <item>Food</item>
    <item>Social work / Mental health</item>
    <item>Activism / Awareness</item>
    <item>Accomodation / Housing Support</item>
    <item>Faith-Based Organisation</item>
        <item>Gardening / Permaculture</item>
    </string-array>

    <string name="creative">Creative "&amp;" Activities / Labour</string>
    <string name="medical">Medical, Health "&amp;" Hygiene</string>
    <string name="education">Education "&amp;" Employability</string>

    <string name="home">Home</string>
    <string name="find_overseas">Locate Action Overseas</string>
    <string name="list_overseas_menu">List Action Overseas</string>
    <string name="find_overseas_menu">Find Action Overseas</string>
    <string name="list_overseas">List Action Overseas</string>
    <string name="add_overseas_menu">Add Org Overseas</string>
    <string name="other_resources">Other Resources</string>
    <string name="action_uk">Action in the UK</string>
    <string name="action_overseas">Action Overseas</string>
    <string name="action_online">Online Action</string>
    <string name="personal">Personal</string>
    <string name="find_org"><![CDATA[Locate Action in the Uk ]]></string>
    <string name="list_orgs"><![CDATA[List Action in the Uk]]></string>
    <string name="find_org_menu"><![CDATA[Locate Action in the Uk]]></string>
    <string name="list_org_menu"><![CDATA[List Action in the Uk]]></string>
    <string name="add_org">Add Organisation</string>
    <string name="add_fund">Add Fundraiser</string>
    <string name="add_online">Add Online Action</string>
    <string name="contributions">Manage Contributions</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="area">Area</string>
    <string name="logout">Logout</string>
    <string name="permissions_write_external_title">Write to disk</string>
    <string name="permissions_write_external_message">Grant permission to write to external storage</string>
    <string name="details">Details</string>

</resources>
