<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:layout_weight="2">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/botandright"
                android:orientation="horizontal"
                >
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:id="@+id/ukimg1"
                        android:layout_marginTop="@dimen/_35sdp"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true" />
                    <TextView
                        android:id="@+id/uktext1"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/find_org"
                        android:gravity="center"
                        android:textSize="@dimen/_16ssp"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:textColor="@android:color/white"
                        android:layout_below="@+id/ukimg1"
                        android:layout_alignLeft="@+id/ukimg1"
                        android:layout_alignStart="@+id/ukimg1" />
                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                >
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/bottomborder"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_marginTop="@dimen/_35sdp"
                        android:id="@+id/ukimg2"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true" />
                    <TextView
                        android:id="@+id/uktext2"
                        android:text="@string/list_orgs"
                        android:gravity="center"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_16ssp"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:textColor="@android:color/white"
                        android:layout_below="@+id/ukimg2"
                        android:layout_alignLeft="@+id/ukimg2"
                        android:layout_alignStart="@+id/ukimg2" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:layout_weight="2">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bottomright"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_marginTop="@dimen/_35sdp"
                        android:id="@+id/ukimg3"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        />
                    <TextView
                        android:id="@+id/uktext3"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/add_org"
                        android:gravity="center"
                        android:textSize="@dimen/_16ssp"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:textColor="@android:color/white"
                        android:layout_below="@+id/ukimg3"
                        android:layout_alignLeft="@+id/ukimg3"
                        android:layout_alignStart="@+id/ukimg3" />
                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_marginTop="@dimen/_35sdp"
                        android:id="@+id/ukimg4"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        />
                    <TextView
                        android:id="@+id/uktext4"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/add_fund"
                        android:gravity="center"
                        android:textSize="@dimen/_16ssp"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:textColor="@android:color/white"
                        android:layout_below="@+id/ukimg4"
                        android:layout_alignLeft="@+id/ukimg4"
                        android:layout_alignStart="@+id/ukimg4" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
